[package]
name = "parallel_computing_lab5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
[dependencies.ws-tokio]
path = "libs/ws-tokio"

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1.0", features = ["rt", "macros"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tungstenite = { version = "0.12", default-features = false }
tokio-tungstenite = { version = "0.13" }
serde = "*"
serde_json = "*"
