[package]
name = "parallel_computing_lab5"
version = "0.1.0"
edition = "2021"


[dependencies]
futures = { version = "0.3" }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "http2", "tcp"] }
tungstenite = { version = "0.12", default-features = false }
tokio-tungstenite = { version = "0.13" }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
pretty_env_logger = "*"
